deploy/k8s/apps/admin-client/overlays/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-client
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
